# CUniMolSys

./: .gitignore  CMakeLists.txt  bonddetector.cpp  bonddetector.h  lammpsdatafile.cpp  lammpsdatafile.h  main.cpp  mol.mol2  mol2file.cpp  mol2file.h  molecularmanipulator.cpp  molecularmanipulator.h  opener.cpp  opener.h  read_traj.py  resources.h  resources.in  trajectory.cpp  trajectory.h  universalmolecularsystem.cpp  universalmolecularsystem.h  utility.cpp  utility.h  vmdinterface.cpp  vmdinterface.h  xyzfile.cpp  xyzfile.h
Data/: README  atomicweights.csv  bondrules.csv
Data/Forcefields/: ClayBondRules.csv  ClayFFAtomTypes.txt  ClayFFDescription.txt  OPLSAtomTypes.txt  SPCEAtomTypes.txt
Data/Structures/: PolyPS.mol2
TrajAnalysis/: CMakeLists.txt  density.py  polymerZ.py  trajana.cpp  trajana.h
UnitTests/: CMakeLists.txt  TestingTest.cpp  TestsCommon.cmake
UnitTests/000.ExampleTest/: CMakeLists.txt  TestMain.cpp
UnitTests/001.ExampleTest/: CMakeLists.txt  TestMain.cpp
UnitTests/001.TestUtility/: TestMain.cpp
UnitTests/002.TestUniversalMolecularSystem/: TestMain.cpp
UnitTests/003.TestMol2/: TestMain.cpp
UnitTests/004.TestBondDectector/: TestMain.cpp
UnitTests/005.TestManipulator/: PolyPS_broken.mol2  TertAmide.mol2  TestMain.cpp  opener.cpp
UnitTests/006.TestSolvateSys/: TestMain.cpp
UnitTests/007.TestLAMMPSDATA/: TestMain.cpp  test.data
UnitTests/008.TestTraj/: TestMain.cpp  polymer.traj  water.data  water.traj
UnitTests/009.TestVMDInterface/: TestMain.cpp
doc/: neighborlist.key
include/: README
